momento/src/commands/capacity_pool/snapshots/display_family_with_all_fields.snap
---
source: momento/src/commands/capacity_pool/display.rs
expression: response.to_string()
---
* Family: foo_bar
  (This is the cell's/endpoint's current default family.)
Min Capacity: 5 GiB
Max Capacity: 9876 GiB
