momento/src/commands/capacity_pool/snapshots/format_flex_provisioning_with_current_values.snap
---
source: momento/src/commands/capacity_pool/display.rs
expression: "format_flex_provisioning(&provisioning, &allocation)"
---
- Capacity: 32..128 GiB (currently 40)
- Replicas: 1..2 per shard (currently 2)
- Family: foo_bar
- Availability Zones: use1-az1
