momento/src/commands/capacity_pool/snapshots/format_flex_provisioning_with_family_default.snap
---
source: momento/src/commands/capacity_pool/display.rs
expression: "format_flex_provisioning(&provisioning, &allocation)"
---
- Capacity: 32..128 GiB
- Replicas: 1..2 per shard
- Family: cell default
- Availability Zones: use1-az1
